# linguister

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  makefile  pyproject.toml  setup.cfg  setup.py
linguister/: __init__.py  audio.py  config.py  const.py  errout.py  exceptions.py  info.py  main.py  sdk.py  utils.py
linguister/sdk/: __init__.py  base.py  bing.py  google.py  iciba.py  youdao.py
tests/: _test_play.py  const.py  play.py  test_main.py  test_out.py  test_play.py  test_sdk.py
translator/: __init__.py  api.py  audio.py  config.py  exceptions.py  info.py  sdk.py  sysout.py
